more formatting errr

--- a/word2vec-in-6-lines.ipynb
+++ b/word2vec-in-6-lines.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -187,27 +187,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20247"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(freq_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'by', 118),\n",
+       " (u'william', 4),\n",
+       " (u'shakespeare', 9),\n",
+       " (u'from', 97),\n",
+       " (u'fairest', 5),\n",
+       " (u'creatures', 2),\n",
+       " (u'we', 24),\n",
+       " (u'desire', 11),\n",
+       " (u'increase', 4),\n",
+       " (u'that', 338),\n",
+       " (u'thereby', 2),\n",
+       " (u'beauty', 70),\n",
+       " (u'rose', 6),\n",
+       " (u'might', 26),\n",
+       " (u'never', 16),\n",
+       " (u'die', 12),\n",
+       " (u'but', 168),\n",
+       " (u'as', 132),\n",
+       " (u'the', 613),\n",
+       " (u'riper', 2),\n",
+       " (u'should', 46)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "freq_list[100:121]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'the', 613),\n",
+       " (u'and', 560),\n",
+       " (u'to', 495),\n",
+       " (u'of', 488),\n",
+       " (u'in', 380),\n",
+       " (u'my', 372),\n",
+       " (u'that', 338),\n",
+       " (u'thy', 281),\n",
+       " (u'thou', 235),\n",
+       " (u'with', 228),\n",
+       " (u'for', 198),\n",
+       " (u'love', 195),\n",
+       " (u'is', 194),\n",
+       " (u'not', 188),\n",
+       " (u'you', 183),\n",
+       " (u'but', 168),\n",
+       " (u'me', 164),\n",
+       " (u'thee', 162),\n",
+       " (u'be', 160),\n",
+       " (u'or', 157)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the above method is okay, but its not sorted.\n",
     "\n",
@@ -230,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -241,36 +313,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99754001960964001"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.wv.similarity('man', 'woman')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99999999999999989"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.wv.similarity('woman', 'woman')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.08202583,  0.0824983 , -0.02512474,  0.10419195, -0.07338882,\n",
+       "        0.0139989 , -0.04520747, -0.08931259, -0.00980864,  0.08530603,\n",
+       "        0.02788235, -0.09535816, -0.04542717,  0.03349644, -0.0123863 ,\n",
+       "        0.10691798,  0.04491619, -0.05606038,  0.01234527, -0.02241415,\n",
+       "       -0.13179505, -0.06530344,  0.06341996,  0.14719738, -0.01375049,\n",
+       "        0.02527826, -0.05636869,  0.10421619, -0.06053819, -0.08885699,\n",
+       "       -0.01531487,  0.1431126 ,  0.06862741, -0.00553441,  0.02370683,\n",
+       "        0.05022854,  0.00748868,  0.01143656, -0.00389735, -0.07261071,\n",
+       "       -0.03773026,  0.04934052, -0.07664131, -0.0411126 ,  0.00539695,\n",
+       "       -0.0596255 ,  0.03303362,  0.01071489, -0.03568818,  0.03480463,\n",
+       "        0.00367257, -0.00189138, -0.027572  , -0.03023884, -0.0280238 ,\n",
+       "        0.00030319, -0.00260339, -0.030462  , -0.13635485,  0.02629017,\n",
+       "       -0.06364894,  0.04515765, -0.02659768, -0.03539969, -0.01832859,\n",
+       "        0.00489723, -0.08884388,  0.05692488,  0.08720477,  0.00893202,\n",
+       "       -0.04438996, -0.0401402 , -0.04898106,  0.02646905, -0.1108785 ,\n",
+       "       -0.05100903, -0.06045908,  0.07902717, -0.0161067 , -0.00328433,\n",
+       "       -0.02594371,  0.07714844,  0.01347714, -0.02698018,  0.00047195,\n",
+       "        0.0966561 ,  0.00045146, -0.08884953,  0.04051106,  0.05760375,\n",
+       "       -0.04164189,  0.02208702, -0.0073052 , -0.01041839, -0.00960741,\n",
+       "       -0.03186337,  0.05618915, -0.01351432,  0.0080917 , -0.01386721], dtype=float32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model['woman']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -281,18 +405,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'woman', 1.0000001192092896),\n",
+       " (u'she', 0.9988530278205872),\n",
+       " (u'might', 0.9988079071044922),\n",
+       " (u'of', 0.9987846612930298),\n",
+       " (u'hate', 0.9987770318984985),\n",
+       " (u'still', 0.9987694025039673),\n",
+       " (u'upon', 0.9987680912017822),\n",
+       " (u'it', 0.9987677931785583),\n",
+       " (u'when', 0.998759388923645),\n",
+       " (u'should', 0.9987472295761108),\n",
+       " (u'you', 0.9987443685531616),\n",
+       " (u'thee', 0.9987438321113586),\n",
+       " (u'her', 0.998740553855896),\n",
+       " (u'fair', 0.9987391233444214),\n",
+       " (u'every', 0.9987378120422363)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.wv.similar_by_vector(vec1, topn=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'men', 1.0),\n",
+       " (u'thou', 0.9996335506439209),\n",
+       " (u'their', 0.999630331993103),\n",
+       " (u'at', 0.9996273517608643),\n",
+       " (u'as', 0.9996235966682434),\n",
+       " (u'and', 0.9996190071105957),\n",
+       " (u'of', 0.9996188282966614),\n",
+       " (u'world', 0.9996161460876465),\n",
+       " (u'my', 0.9996157884597778),\n",
+       " (u'his', 0.999614953994751),\n",
+       " (u'where', 0.9996145963668823),\n",
+       " (u'with', 0.9996132850646973),\n",
+       " (u'by', 0.9996117949485779),\n",
+       " (u'heart', 0.9996115565299988),\n",
+       " (u'me', 0.999609112739563)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v = model['men']\n",
     "model.wv.similar_by_vector(v, topn=15)"
@@ -300,9 +474,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'women', 1.0),\n",
+       " (u'gift', 0.9818852543830872),\n",
+       " (u'fire', 0.9817575812339783),\n",
+       " (u'mistress', 0.9816043376922607),\n",
+       " (u'smell', 0.9815888404846191),\n",
+       " (u'cheeks', 0.9814128279685974),\n",
+       " (u'youth', 0.9812649488449097),\n",
+       " (u'worse', 0.9809892177581787),\n",
+       " (u'vile', 0.9809786677360535),\n",
+       " (u'told', 0.9809551239013672),\n",
+       " (u'must', 0.9809184074401855),\n",
+       " (u'could', 0.9808851480484009),\n",
+       " (u'put', 0.9808494448661804),\n",
+       " (u'absence', 0.9808334112167358),\n",
+       " (u'away', 0.980821430683136)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v = model['women']\n",
     "model.wv.similar_by_vector(v, topn=15)"
@@ -310,9 +509,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'love', 1.0),\n",
+       " (u'and', 0.999951183795929),\n",
+       " (u'my', 0.9999462366104126),\n",
+       " (u'in', 0.9999434947967529),\n",
+       " (u'so', 0.9999430179595947),\n",
+       " (u'thou', 0.9999426603317261),\n",
+       " (u'of', 0.9999403357505798),\n",
+       " (u'thy', 0.9999395608901978),\n",
+       " (u'that', 0.9999392032623291),\n",
+       " (u'to', 0.9999375343322754),\n",
+       " (u'doth', 0.9999368190765381),\n",
+       " (u'the', 0.9999354481697083),\n",
+       " (u'me', 0.9999353885650635),\n",
+       " (u'is', 0.9999339580535889),\n",
+       " (u'have', 0.9999337196350098),\n",
+       " (u'with', 0.9999337196350098),\n",
+       " (u'no', 0.9999331831932068),\n",
+       " (u'their', 0.9999323487281799),\n",
+       " (u'do', 0.9999316334724426),\n",
+       " (u'which', 0.999929666519165)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v = model['love']\n",
     "model.wv.similar_by_vector(v, topn=20)"
