link was broke in word2vec html, fixed it

--- a/word2vec-in-6-lines.ipynb
+++ b/word2vec-in-6-lines.ipynb
@@ -7,8 +7,8 @@
     "# Word2Vec in 6 lines of Python\n",
     "\n",
     "- 6 lines, not including the analysis\n",
-    "- Using [project gutenberg]('http://www.gutenberg.org/wiki/Main_Page') to obtain data. \n",
-    "- [Input data used in this walkthrough]('http://www.gutenberg.org/ebooks/1041')\n",
+    "- Using [project gutenberg](http://www.gutenberg.org/wiki/Main_Page) to obtain data. \n",
+    "- [Input data used in this walkthrough](http://www.gutenberg.org/ebooks/1041)\n",
     "    \n",
     "    \n",
     "    1  import requests\n",
